@startuml BitePlate_Class_CommandPattern
title BitePlate SRMS — Command Pattern (Focused Diagram)

skinparam backgroundColor white
skinparam classAttributeIconSize 0

note as N1
  COMMAND PATTERN
  Encapsulates kitchen actions as objects.
  Supports undo, logging, and queuing.
  Invoker (KitchenQueue) decoupled from
  Receiver (Order).
end note

interface KitchenCommand {
  +execute() : void
  +undo() : void
  +getDescription() : String
}

class KitchenQueue <<Invoker>> {
  -commandHistory : Deque<KitchenCommand>
  -redisAdapter : KitchenQueueRedisAdapter
  +execute(cmd : KitchenCommand) : void
  +undoLast() : KitchenCommand
  +getQueue() : List<String>
}

class PrepareOrderCommand <<ConcreteCommand>> {
  -order : Order
  -previousStatus : OrderStatus
  +execute() : void
  +undo() : void
  +getDescription() : String
}

class ExpediteOrderCommand <<ConcreteCommand>> {
  -order : Order
  -previousStatus : OrderStatus
  +execute() : void
  +undo() : void
  +getDescription() : String
}

class CancelOrderCommand <<ConcreteCommand>> {
  -order : Order
  -previousStatus : OrderStatus
  +execute() : void
  +undo() : void
  +getDescription() : String
}

class Order <<Receiver>> {
  -id : Long
  -status : OrderStatus
  +updateStatus(s : OrderStatus) : void
}

class KitchenQueueRedisAdapter {
  -QUEUE_KEY : String = "kitchen:queue"  {static}
  +push(description : String) : void
  +pop() : String
  +peek() : List<String>
}

KitchenQueue "1" o-- "0..*" KitchenCommand : history (Deque) >
KitchenQueue --> KitchenQueueRedisAdapter : delegates push/peek >
PrepareOrderCommand   ..|> KitchenCommand
ExpediteOrderCommand  ..|> KitchenCommand
CancelOrderCommand    ..|> KitchenCommand
PrepareOrderCommand   --> Order : updateStatus(PREPARING) >
ExpediteOrderCommand  --> Order : updateStatus(READY) >
CancelOrderCommand    --> Order : updateStatus(CANCELLED) >
KitchenQueue ..> KitchenCommand : <<uses>>

note bottom of KitchenQueue
  execute(cmd):
    cmd.execute()
    commandHistory.push(cmd)
    redisAdapter.push(cmd.getDescription())

  undoLast():
    cmd = commandHistory.pop()
    cmd.undo()
end note

note bottom of PrepareOrderCommand
  execute():
    previousStatus = order.getStatus()
    order.updateStatus(PREPARING)

  undo():
    order.updateStatus(previousStatus)
end note

@enduml
